# Cpp_Codes

AI_AUTOMATION/: CMakeLists.txt  main.cpp  test.py
Ejaskhsh/: Ejaskhsh.sln
Ejaskhsh/Ejaskhsh/: Ejaskhsh.vcxproj  Ejaskhsh.vcxproj.filters  Image-comments.h  Image.cpp  Image.h  ImageStorageTraits.h  codec.h  exam2021.cpp
Ejetastikh/: CMakeLists.txt  main.cpp
Exceptions/Exceptions_1/: CMakeLists.txt  main.cpp
Exceptions/Exceptions_2/: CMakeLists.txt  main.cpp
Files/Files3/: Files3.sln
Files/Files_1/: CMakeLists.txt  main.cpp
Files/Files_2/: CMakeLists.txt  main.cpp
Lambda/: main.cpp
Leetcode/: main.cpp  test
MATHIMA_1/Askhsh_1/: main.cpp
MATHIMA_10/Askisi_1/: CMakeLists.txt  main.cpp
MATHIMA_10/Askisi_2/: main.cpp
MATHIMA_10/Askisi_3/: main.cpp
MATHIMA_10/Klhronomikothta_1/: CMakeLists.txt  main.cpp
MATHIMA_10/Klhronomikothta_2/: CMakeLists.txt  main.cpp
MATHIMA_10/Klhronomikothta_3/: CMakeLists.txt  main.cpp
MATHIMA_10/Klhronomikothta_4/: CMakeLists.txt
MATHIMA_11/Askisi_1/: main.cpp
MATHIMA_11/Askisi_2/: main.cpp
MATHIMA_11/Askisi_3/: CMakeLists.txt  main.cpp
MATHIMA_11/Virtual_Methods_1/: CMakeLists.txt  main.cpp
MATHIMA_11/Virtual_Methods_2/: CMakeLists.txt  main.cpp
MATHIMA_11/Virtual_Methods_3/: CMakeLists.txt  main.cpp
September_2020/: September_2020.sln
Test/: CMakeLists.txt  dog.cpp  dog.h  main.cpp
Test2/: CMakeLists.txt  main.cpp
Test3/: CMakeLists.txt  Test3.sln  main.cpp  test.txt
Unsigned/: Buffer_2D.h  CMakeLists.txt  main.cpp
Video_1/: Video_1.sln
Yperfwrtwsh_Telestwn/: CMakeLists.txt  main.cpp
(+275 files in other folders)
